Fixed missing styles and adds spacing for h1.

--- a/portfolio_v2/src/components/carousel/carousel.css
+++ b/portfolio_v2/src/components/carousel/carousel.css
@@ -22,6 +22,7 @@
 .carouselContainer .arrowLeftContainer .arrowLeft,
 .carouselContainer .arrowRightContainer .arrowRight {
   font-size: 1.8rem;
+  color: var(--primary800);
   cursor: pointer;
 }
 
@@ -42,7 +43,6 @@
   display: grid;
   grid-template-columns: 1fr minmax(140px, 290px);
   gap: 2rem;
-  /* min-height: 340px; */
   margin: 0 1.5rem 1rem 1.5rem;
 }
 
@@ -57,8 +57,6 @@
 
 .carouselContainer .carouselContent {
   max-height: 366px;
-  /* border-right: 1px solid var(--primary600);
-  border-left: 1px solid var(--primary600); */
 }
 
 @media screen and (max-width: 1750px) {
@@ -84,9 +82,7 @@
   font-size: 3rem;
   font-weight: 500;
   color: var(--primary800);
-  border-bottom: solid 1px var(--primary600);
-  width: 98%;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 @media screen and (max-width: 435px) {
@@ -99,8 +95,9 @@
   font-family: "PT Serif", serif;
   font-size: 1rem;
   color: var(--wordsMain);
-  padding: 0 0.5rem 1rem 0.5rem;
+  padding: 1rem 0.5rem;
   margin-bottom: 1rem;
+  border-top: solid 1px var(--primary600);
   border-bottom: solid 1px var(--primary600);
   width: 98%;
 }
@@ -123,7 +120,6 @@
   padding: 1rem 1rem 1rem 1rem;
   max-height: 382px;
   background-color: var(--white500Main);
-  /* border: 1px solid var(--primary200); */
   border-radius: 6px;
   box-shadow: 0px 5px 8px rgba(0, 0, 0, 0.2);
 }
@@ -194,7 +190,7 @@
 .carouselContainer .indexActive {
   width: 0.5rem;
   height: 0.5rem;
-  background-color: var(--primary900);
+  background-color: var(--primary800);
   border-radius: 100%;
   transform: scale(1.2);
   transition: 0.5s ease all;
